--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@ function draw(){
 	ctx.fillRect(700,300,100,100);
 	ctx.fillStyle= 'red';
 	ctx.fillText('GO', 720,370);
+
+	ctx.fillStyle='rgba(100,100,10,1)';
+	ctx.fillRect(700,200,100,100);
+	ctx.fillStyle= 'white';
+	ctx.fillText('reset', 720,370);
+
 }
 function doMouseDown(event){
 	e1=event.pageX;
