--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <body>
 
 <a href='javascript/time.html'>time </a>
+<br>
+<a href='javascript/viergewinnt.html'>Vier gewinnt (statistisch) </a>
 
 </body>
 </html>
