--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 <br>
 <a href='javascript/viergewinnt.html'>Vier gewinnt (statistisch) </a>
 
+<br>
+<a href='javascript/bezier.html'>Bezierkurven</a>
+
+<br>
+<a href='javascript/webgl/2.html'>Dreeck, gefärbt, Shader, Matrizen</a>
+
 </body>
 </html>
